--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
@@ -2119,13 +2119,13 @@ span.customize-control-title.ast-group-section-title {
 
 }
 .ast-link-open-in-new-tab-wrapper {
-  margin: 20px 0 0;
+  margin: 24px 0 0;
   border-top: 1px dashed var(--ast-customizer-color-7);
 }
 
 .ast-link-label-wrapper {
-  margin: 20px 0;
-  padding-top: 20px;
+  margin: 24px 0;
+  padding-top: 24px;
   border-top: 1px dashed var(--ast-customizer-color-7);
 }
 
@@ -3843,7 +3843,7 @@ span.customize-control-title.ast-group-section-title {
 }
 
 .customize-control-ast-link .ast-togglecontrol-wrapper .components-base-control__field {
-  margin: 20px 0 0;
+  margin: 24px 0 0;
 }
 
 .ast-togglecontrol-wrapper .toggle-control-label, .ast-togglecontrol-wrapper .components-toggle-control__label {
