--- a/inc/customizer/custom-controls/assets/css/unminified/link-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/link-rtl.css
@@ -1,10 +1,10 @@
 .ast-link-open-in-new-tab-wrapper {
-  margin: 20px 0 0;
+  margin: 24px 0 0;
   border-top: 1px dashed var(--ast-customizer-color-7);
 }
 
 .ast-link-label-wrapper {
-  margin: 20px 0;
-  padding-top: 20px;
+  margin: 24px 0;
+  padding-top: 24px;
   border-top: 1px dashed var(--ast-customizer-color-7);
 }
