--- a/inc/customizer/custom-controls/assets/css/unminified/toggle-control-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/toggle-control-rtl.css
@@ -8,7 +8,7 @@
 }
 
 .customize-control-ast-link .ast-togglecontrol-wrapper .components-base-control__field {
-  margin: 20px 0 0;
+  margin: 24px 0 0;
 }
 
 .ast-togglecontrol-wrapper .toggle-control-label, .ast-togglecontrol-wrapper .components-toggle-control__label {
